<resources>
    <string name="app_name">ArmaLOFT</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_logout">Do you want to logout?</string>
    <string name="forgot_password">forgot password?</string>
    <string name="spinner_title">Select Sci. Type</string>
    <string name="login">Login</string>
    <string name="action_settings">settings</string>
    <string name="change_password">Change\n Password</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="firstname">First Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="lastname">Lastname</string>
    <string name="update_profile">Update Profile</string>
</resources>