<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="1dp"
            app:cardBackgroundColor="@color/colorWhite">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorWhite"
                android:orientation="vertical">


                <FrameLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="14dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/person"
                        android:id="@+id/profile_image"
                        app:civ_border_color="@color/colorPrimary"
                        app:civ_border_width="1dp"/>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/imageView"
                        android:adjustViewBounds="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/ic_camare_round"
                        android:contentDescription="@string/app_name"
                        android:layout_gravity="end"
                        android:layout_marginTop="4dp" />
                </FrameLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="1dp"
            app:cardBackgroundColor="@color/colorWhite">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/date"
                    android:editable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/colorPrimary"
                    android:hint="Select Birthdate..."
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/firstname" />

                <EditText
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="Dr.V Venkateswara"
                    android:textColorHint="@color/black"
                    android:inputType="textCapWords"
                    android:textColor="#000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/lastname" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="Rao"
                    android:textColorHint="@color/black"
                    android:inputType="textCapWords"
                    android:textColor="#000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="vvrao@gmail.com"
                    android:textColorHint="@color/black"
                    android:inputType="textEmailAddress"
                    android:textColor="#000"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/colorPrimary"
                    android:text="Mobile No." />

                <EditText
                    android:id="@+id/profile_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="9881342543"
                    android:maxLength="10"
                    android:textColorHint="@color/black"
                    android:inputType="number"
                    android:textColor="#000"
                    />
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="10dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:textColor="@color/colorPrimary"
                        android:text="Select Department Type: D"
                        android:layout_marginBottom="5dp"/>

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/spinner_title"/>

                </LinearLayout>
                <Button
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/bottom_bg"
                    android:text="Update Profile    "
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>

</ScrollView>